--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
           <div class="col-lg-6 col-md-6 col-sm6">
             <div class="latest_slider">
               <div class="slick_slider">
-                <div class="single_iteam"><img src="images/berita2.jpeg" alt=""style="height: 350px;" width="550px">
+                <div class="single_iteam"><img src="images/berita2.jpeg" alt=""style="height: 425px;" width="550px">
                   <h2><a class="slider_tittle" href="pages/single.html">Berita 1</a></h2>
                 </div>
-                <div class="single_iteam"><img src="images/berita3.jpeg" alt=""style="height:350px;" width="550px">
-                  <h2><a class="slider_tittle" href="pages/single.html">Berita 2 </a></h2>
+                <div class="single_iteam"><img src="images/berita3.jpeg" alt=""style="height:425px;" width="550px">
+                  <h2><a class="slider_tittle" href="pages/single2.html">Berita 2 </a></h2>
                 </div>
-                <div class="single_iteam"><img src="images/berita4.jpeg" alt="" style="height:350px;" width="550px">
+                <div class="single_iteam"><img src="images/berita4.jpeg" alt="" style="height:425px;" width="550px">
                   <h2><a class="slider_tittle" href="pages/single.html">Berita 3 </a></h2>
                 </div>
-                <div class="single_iteam"><img src="images/berita5.jpeg" alt=""style="height:350px;" width="550px">
+                <div class="single_iteam"><img src="images/berita5.jpeg" alt=""style="height:425px;" width="550px">
                   <h2><a class="slider_tittle" href="pages/single.html">Berita 4</a></h2>
                 </div>
               </div>
@@ -499,7 +499,7 @@
               </div>
             </div>
             <div class="single_bottom_rightbar wow fadeInDown">
-              <h2>Popular Lnks</h2>
+              <h2>Popular Links</h2>
               <ul>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Blog Home</a></li>
@@ -519,7 +519,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="single_footer_top wow fadeInLeft">
-              <h2>Flicker Images</h2>
+              <h2>Gambar Berputar</h2>
               <ul class="flicker_nav">
                 <li><a href="#"><img src="images/berita2.jpeg" alt=""></a></li>
                 <li><a href="#"><img src="images/berita3.jpeg" alt=""></a></li>
@@ -536,14 +536,14 @@
             <div class="single_footer_top wow fadeInDown">
               <h2>Labels</h2>
               <ul class="labels_nav">
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href="#">Games</a></li>
-                <li><a href="#">Fashion</a></li>
-                <li><a href="#">Sports</a></li>
-                <li><a href="#">Technology</a></li>
-                <li><a href="#">Slider</a></li>
-                <li><a href="#">Life &amp; Style</a></li>
+                <li><a href="#">Tema 1</a></li>
+                <li><a href="#">Tema 2</a></li>
+                <li><a href="#">Tema 3</a></li>
+                <li><a href="#">Tema 4</a></li>
+                <li><a href="#">Tema 5</a></li>
+                <li><a href="#">Tema 6</a></li>
+                <li><a href="#">Tema 7</a></li>
+                <li><a href="#">Tema 8</a></li>
               </ul>
             </div>
           </div>
@@ -561,12 +561,12 @@
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="footer_bottom_left">
-              <p>Copyright &copy; 2045 <a href="index.html">magExpress</a></p>
+              <p>Copyright &copy; 2022 <a href="index.html">Solo Harian</a></p>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="footer_bottom_right">
-              <p>Developed BY Wpfreeware</p>
+              <p>Developed BY HintzID</p>
             </div>
           </div>
         </div>
