--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Harian Solo | Pages | Kontak</title>
+<title>Harian Solo | Kontak</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,8 +68,10 @@
                 </ul>
               </li>
               <li><a href="single.html">Single page</a></li>
-              <li><a href="archive1.html">Games</a></li>
-              <li><a href="archive1.html">Technology</a></li>
+              
+              <li><a href="archive1.html">Arsip 1</a></li>
+              <li><a href="archive1.html">Arsip 2</a></li>
+              
               <li><a href="contact.html">Kontak</a></li>
               <li><a href="404.html">404 page</a></li>
             </ul>
@@ -107,8 +109,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
-            <h2>Flicker Images</h2>
-            <ul class="flicker_nav">
+            </ul>
           </div>
         </div>
       </div>
