--- a/pages/single.html
+++ b/pages/single.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Harian Solo | Pages | Tentang Kami</title>
+  <title>Harian Solo | Berita 1</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="images2/favicon-1.png">
@@ -63,10 +63,10 @@
             <li class=""><a href="../index.html">Home</a></li>
             <li class="dropdown"> <a href="#" class="" data-toggle="dropdown" role="button" aria-expanded="false">Artikel dan Berita</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="archive-main.html">Archive</a></li>
-                <li><a href="archive1.html">Archive 1</a></li>
-                <li><a href="archive2.html">Archive 2</a></li>
-                <li><a href="archive3.html">Archive 3</a></li>
+                <li><a href="archive-main.html">Arsip</a></li>
+                <li><a href="archive1.html">Arsip 1</a></li>
+                <li><a href="archive2.html">Arsip 2</a></li>
+                <li><a href="archive3.html">Arsip 3</a></li>
               </ul>
             </li>
             <li><a href="single.html">Single page</a></li>
@@ -84,7 +84,7 @@
           <div class="single_page_area">
             <ol class="breadcrumb">
               <li><a href="#">Home</a></li>
-              <li><a href="#">Technology</a></li>
+              <li><a href="#">Tema ?</a></li>
               <li class="active">JUDUL BERITA </li>
             </ol>
             <h2 class="post_titile">JUDUL BERITA</h2>
@@ -95,12 +95,13 @@
               <blockquote> CATATAN PENTING. </blockquote>
               <p>ISI BERITA </p>
               <ul>
-                <li>Nunc sed aliquet nisi. Nullam ut magna</li>
-                <li>Nunc sed aliquet nisi. Nullam ut magna non lacus adipiscing volutpat</li>
-                <li>Nunc sed aliquet nisi. Nullam ut magna</li>
-                <li>Nunc sed aliquet nisi. Nullam ut magna non lacus adipiscing volutpat</li>
-                <li>Nunc sed aliquet nisi. Nullam ut magna</li>
-                <li>Nunc sed aliquet nisi. Nullam ut magna non</li>
+                <li>berita 1</li>
+                <li>berita 2</li>
+                <li>berita 3</li>
+                <li>berita 4</li>
+                <li>berita 5</li>
+                <li>berita 6</li>
+                <li>berita 7</li>
               </ul>
               <button class="btn">Default</button>
               <button class="btn btn-primary">Primary</button>
@@ -113,37 +114,37 @@
         </div>
         <div class="post_pagination">
           <div class="prev"> <a class="angle_left" href="#"><i class="fa fa-angle-double-left"></i></a>
-            <div class="pagincontent"> <span>Previous Post</span> <a href="#">Aliquam quam orci in molestie a tempor nec</a> </div>
+            <div class="pagincontent"> <span>Post Sebelumnya</span> <a href="#">Home Page</a> </div>
           </div>
           <div class="next">
-            <div class="pagincontent"> <span>Next Post</span> <a href="#">Aliquam quam orci in molestie a tempor nec</a> </div>
+            <div class="pagincontent"> <span>Post Selanjutnya</span> <a href="#">Berita 2</a> </div>
             <a class="angle_right" href="#"><i class="fa fa-angle-double-right"></i></a> </div>
         </div>
         <div class="share_post"> <a class="facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a> <a class="twitter" href="#"><i class="fa fa-twitter"></i>Twitter</a> <a class="googleplus" href="#"><i class="fa fa-google-plus"></i>Google+</a> <a class="linkedin" href="#"><i class="fa fa-linkedin"></i>LinkedIn</a> <a class="stumbleupon" href="#"><i class="fa fa-stumbleupon"></i>StumbleUpon</a> <a class="pinterest" href="#"><i class="fa fa-pinterest"></i>Pinterest</a> </div>
         <div class="similar_post">
-          <h2>Similar Post You May Like <i class="fa fa-thumbs-o-up"></i></h2>
+          <h2>Post yang mungkin anda suka<i class="fa fa-thumbs-o-up"></i></h2>
           <ul class="small_catg similar_nav wow fadeInDown animated">
             <li>
-              <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/112x112.jpg" alt=""></a>
+              <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                  <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                  <h4 class="media-heading"><a href="#">Berita 1</a></h4>
+                  <p>Isi Berita </p>
                 </div>
               </div>
             </li>
             <li>
-              <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/112x112.jpg" alt=""></a>
+              <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                  <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                  <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
+                  <p>Isi Berita </p>
                 </div>
               </div>
             </li>
             <li>
-              <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/112x112.jpg" alt=""></a>
+              <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"> <a class="media-left related-img" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                  <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                  <h4 class="media-heading"><a href="#">Berita  3</a></h4>
+                  <p>Isi Berita </p>
                 </div>
               </div>
             </li>
@@ -153,29 +154,29 @@
       <div class="col-lg-4 col-md-4">
         <div class="content_bottom_right">
           <div class="single_bottom_rightbar">
-            <h2>Recent Post</h2>
+            <h2>Post Sebelumnya</h2>
             <ul class="small_catg popular_catg wow fadeInDown">
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                    <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                    <p>Isi Berita </p>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                    <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
+                    <p>Isi Berita </p>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"><img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                    <h4 class="media-heading"><a href="#">Berita 3 </a></h4>
+                    <p>Isi Berita </p>
                   </div>
                 </div>
               </li>
@@ -184,32 +185,32 @@
           <div class="single_bottom_rightbar">
             <ul role="tablist" class="nav nav-tabs custom-tabs">
               <li class="active" role="presentation"><a data-toggle="tab" role="tab" aria-controls="home" href="#mostPopular">Most Popular</a></li>
-              <li role="presentation"><a data-toggle="tab" role="tab" aria-controls="messages" href="#recentComent">Recent Comment</a></li>
+              <li role="presentation"><a data-toggle="tab" role="tab" aria-controls="messages" href="#recentComent">Recent Coment</a></li>
             </ul>
             <div class="tab-content">
               <div id="mostPopular" class="tab-pane fade in active" role="tabpanel">
                 <ul class="small_catg popular_catg wow fadeInDown">
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/112x112.jpg" alt=""></a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita </p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/112x112.jpg" alt=""></a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
+                        <p>Isi Berita </p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/112x112.jpg" alt=""></a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 3 </a></h4>
+                        <p>Isi Berita </p>
                       </div>
                     </div>
                   </li>
@@ -218,26 +219,26 @@
               <div id="recentComent" class="tab-pane fade" role="tabpanel">
                 <ul class="small_catg popular_catg">
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/112x112.jpg" alt=""></a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita </p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/112x112.jpg" alt=""></a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 2 </a></h4>
+                        <p>Isi Berita </p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/112x112.jpg" alt=""></a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"><img src="../images/berita2.jpeg" alt=""></a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 3 </a></h4>
+                        <p>Isi Berita </p>
                       </div>
                     </div>
                   </li>
@@ -246,18 +247,18 @@
             </div>
           </div>
           <div class="single_bottom_rightbar">
-            <h2>Blog Archive</h2>
+            <h2>Arsip Blog</h2>
             <div class="blog_archive wow fadeInDown">
               <form action="#">
                 <select>
-                  <option value="">Blog Archive</option>
+                  <option value="">Arsip Blog</option>
                   <option value="">October(20)</option>
                 </select>
               </form>
             </div>
           </div>
           <div class="single_bottom_rightbar wow fadeInDown">
-            <h2>Popular Lnks</h2>
+            <h2>Link Populer</h2>
             <ul>
               <li><a href="#">Blog</a></li>
               <li><a href="#">Blog Home</a></li>
@@ -277,7 +278,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInLeft">
-            <h2>Flicker Images</h2>
+            <h2>Gambar Berputar</h2>
             <ul class="flicker_nav">
               <li> <a href="#"><img src="../images/berita2.jpeg" alt=""></a> </li>
               <li> <a href="#"><img src="../images/berita3.jpeg" alt=""></a> </li>
@@ -292,16 +293,16 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4">
           <div class="single_footer_top wow fadeInDown">
-            <h2>Labels</h2>
+            <h2>Tema</h2>
             <ul class="labels_nav">
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Games</a></li>
-              <li><a href="#">Fashion</a></li>
-              <li><a href="#">Sports</a></li>
-              <li><a href="#">Technology</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Life &amp; Style</a></li>
+              <li><a href="#">Tema 1</a></li>
+              <li><a href="#">Tema 2</a></li>
+              <li><a href="#">Tema 3</a></li>
+              <li><a href="#">Tema 4</a></li>
+              <li><a href="#">Tema 5</a></li>
+              <li><a href="#">Tema 6</a></li>
+              <li><a href="#">Tema 7</a></li>
+              <li><a href="#">Tema 8</a></li>
             </ul>
           </div>
         </div>
@@ -319,12 +320,12 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_left">
-            <p>Copyright &copy; 2045 <a href="../index.html">magExpress</a></p>
+            <p>Copyright &copy; 2022 <a href="../index.html">Solo Harian</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
           <div class="footer_bottom_right">
-            <p>Developed BY Wpfreeware</p>
+            <p>Developed BY HintzID</p>
           </div>
         </div>
       </div>
