--- a/pages/archive-main.html
+++ b/pages/archive-main.html
@@ -86,88 +86,88 @@
               <div style="margin-top:15px;">
                 <ol class="breadcrumb">
                   <li><a href="#">Home</a></li>
-                  <li><a href="#">Technology</a></li>
-                  <li class="active">Duis quis erat non nunc fringilla </li>
+                  <li><a href="#">Tema ?</a></li>
+                  <li class="active">Berita 1</li>
                 </ol>
               </div>
-              <h2> <span class="bold_line"><span></span></span> <span class="solid_line"></span> <span class="title_text">Latest Updates</span> </h2>
+              <h2> <span class="bold_line"><span></span></span> <span class="solid_line"></span> <span class="title_text">Update Terbaru</span> </h2>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
               <div class="business_category_left wow fadeInDown">
                 <ul class="fashion_catgnav">
                   <li>
-                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/390x240x1.jpg"></a> </div>
-                    <h2 class="catg_titile"><a href="single.html">Aenean mollis metus sit amet ligula adipiscing</a></h2>
+                    <div class="catgimg2_container"> <a href="single.html"><img alt="" src="../images/berita2.jpeg"></a> </div>
+                    <h2 class="catg_titile"><a href="single.html">Berita 1</a></h2>
                     <div class="comments_box"> <span class="meta_date">14/12/2045</span> <span class="meta_comment"><a href="#">No Comments</a></span> <span class="meta_more"><a  href="#">Read More...</a></span> </div>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla...</p>
+                    <p>Isi Berita</p>
                   </li>
                 </ul>
               </div>
@@ -177,13 +177,13 @@
         <div class="pagination_area">
           <nav>
             <ul class="pagination">
-              <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+              <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Sebelumnya</span></a></li>
               <li><a href="#">1</a></li>
               <li><a href="#">2</a></li>
               <li><a href="#">3</a></li>
               <li><a href="#">4</a></li>
               <li><a href="#">5</a></li>
-              <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+              <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Selanjutnya</span></a></li>
             </ul>
           </nav>
         </div>
@@ -191,29 +191,29 @@
       <div class="col-lg-4 col-md-4">
         <div class="content_bottom_right">
           <div class="single_bottom_rightbar">
-            <h2>Recent Post</h2>
+            <h2>Post Sebelumnya</h2>
             <ul class="small_catg popular_catg wow fadeInDown">
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                    <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                    <p>Isi Berita</p>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                    <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                    <p>Isi Berita</p>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/112x112.jpg"> </a>
+                <div class="media wow fadeInDown"> <a href="#" class="media-left"> <img alt="" src="../images/berita2.jpeg"> </a>
                   <div class="media-body">
-                    <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                    <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                    <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                    <p>Isi Berita</p>
                   </div>
                 </div>
               </li>
@@ -228,26 +228,26 @@
               <div id="mostPopular" class="tab-pane fade in active" role="tabpanel">
                 <ul class="small_catg popular_catg wow fadeInDown">
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita</p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita</p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita</p>
                       </div>
                     </div>
                   </li>
@@ -256,26 +256,26 @@
               <div id="recentComent" class="tab-pane fade" role="tabpanel">
                 <ul class="small_catg popular_catg">
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita</p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita</p>
                       </div>
                     </div>
                   </li>
                   <li>
-                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/112x112.jpg" alt=""> </a>
+                    <div class="media wow fadeInDown"> <a class="media-left" href="#"> <img src="../images/berita2.jpeg" alt=""> </a>
                       <div class="media-body">
-                        <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4>
-                        <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
+                        <h4 class="media-heading"><a href="#">Berita 1 </a></h4>
+                        <p>Isi Berita</p>
                       </div>
                     </div>
                   </li>
